# Coherent-Information

./: .gitignore  CI.py  CI_Analytics.nb  CI_EPR Qudit  CI_EPR_Qudit  CI_General.py  CI_General_Poisson_Model.py  CI_Worm_d=2.py  CI_d=2_Bitflip Noise.py  README.md  core.py  pyproject.toml  setup.py  to_do.md  worm_cohinfo_numba.py
data_and_plots/: coherent_information_moebius_length_11_width_11_p_3.json  coherent_information_moebius_length_3_width_3_p_3.json  coherent_information_moebius_length_5_width_5_p_3_gamma_min_0.08_gamma_max_0.5_num_gamma_50.json  coherent_information_moebius_length_5_width_5_p_3_quadratic_gamma_min_0.05_gamma_max_0.7_num_gamma_25.json  coherent_information_moebius_length_7_width_7_p_3.json  coherent_information_moebius_length_9_width_9_p_3.json  plot_coherent_info.ipynb  testing_plot_coherent_info.ipynb
notebooks/: coherent_info.ipynb  coherent_information_moebius_length_3_width_3_p_3.json  coherent_information_moebius_length_3_width_3_p_3_quadratic_gamma_min_0.05_gamma_max_0.7_num_gamma_25.json  coherent_information_moebius_length_5_width_5_p_3.json  cohinfo.ipynb  old_coherent_info.ipynb  simple_cohinfo.ipynb  testing_worm.ipynb  testing_worm_even.ipynb  testing_worm_independence.ipynb  testing_worm_sampling.ipynb  worm_algorithm.ipynb  worm_coherent_info.py  worm_coherent_info_sampling.py  worm_cohinfo_ds_method.ipynb  worm_cohinfo_ds_method.py  worm_cohinfo_sampling.ipynb  worm_cohinfo_sampling.py  worm_cohinfo_sf_method.ipynb  worm_decoder_moebius_qubit.ipynb  worm_moebius_qubit.ipynb
tests/: conftest.py  test_errormodel.py  test_worm.py  (+3 more)
(+30 files in other folders)
