[project]
name = "coherentinfo"
version = "0.0.1"
authors = [
  {name="Alessandro Ciani", email="author@example.com" },
  {name="Shobhna Singh"}
]
description = "Python package for the calculation of coherent information in stabilizer codes"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
  "numpy>=2.3.0"
]

license = "Apache License 2.0"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/ShobHub/Coherent-Information.git"