[project]
name = "coherentinfo"
version = "0.0.1"
authors = [
  {name="Alessandro Ciani", email="alessandrociani89@gmail.com" },
  {name="Shobhna Singh"}
]
description = "Python package for the calculation of coherent information in stabilizer codes"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
  "numpy",
  "scipy"
]

license = {file = "LICENSE"}


[project.urls]
Homepage = "https://github.com/ShobHub/Coherent-Information.git"